# ADCME.jl

./: .gitignore  .travis.yml  Dockerfile  Dockerfile-GPU  Dockerfile-gpu  LICENSE  Manifest.toml  Project.toml  README.md  REQUIRE  data.txt  temp.pkl  test.jl  versions.js
.github/workflows/: CompatHelper.yml  Docker-CPU.yml  Docker-GPU.yml  Docker.yml  Documentation.yml  QuickBuild.yml  TagBot.yml  docker.yml
dev/: index.html  search_index.js
dev/alphascheme/: index.html
dev/api/: index.html
dev/apps/: index.html
dev/apps_ad/: index.html
dev/apps_adseismic/: index.html
dev/apps_ana/: index.html
dev/apps_constitutive_law/: index.html
dev/apps_levy/: index.html
dev/apps_nnfem/: index.html
dev/array/: index.html
dev/bnn/: index.html
dev/convnet/: index.html
dev/customop/: index.html
dev/customop_reference_sheet/: index.html
dev/customopt/: index.html
dev/customopt2/: index.html
dev/designpattern/: index.html
dev/docker/: index.html
dev/exercise/: index.html
dev/extra/: index.html
dev/factorization/: index.html
dev/fdtd/: index.html
dev/flow/: index.html
dev/flowuq/: index.html
dev/four_types/: index.html
dev/gan/: index.html
dev/global/: index.html
dev/guidlines/: index.html
dev/hessian/: index.html
dev/installmpi/: index.html
dev/inverse_impl/: index.html
dev/inverse_modeling/: index.html
dev/julia_customop/: index.html
dev/mcmc/: index.html
dev/mpi/: index.html
dev/mpi_benchmark/: index.html
dev/multithreading/: index.html
dev/newton_raphson/: index.html
dev/nn/: index.html
dev/ode/: index.html
dev/optim/: index.html
dev/optimizers/: index.html
dev/options/: index.html
dev/ot/: index.html
dev/parallel/: index.html
dev/plotly/: index.html
dev/pytorchnn/: index.html
dev/quadrature/: index.html
dev/rbf/: index.html
dev/reinforcement_learning/: index.html
dev/resource_manager/: index.html
dev/resources/: index.html
dev/search/: index.html
dev/second_order_optimizer/: index.html
dev/second_order_pcl/: index.html
dev/smt/: index.html
dev/solution/: index.html
dev/sparse/: index.html
dev/sqlite3/: index.html
dev/toolchain/: index.html
dev/topopt/: index.html
dev/tu_basic/: index.html
dev/tu_customop/: index.html
dev/tu_debug/: index.html
dev/tu_fd/: index.html
dev/tu_fem/: index.html
dev/tu_implicit/: index.html
dev/tu_inv/: index.html
dev/tu_nn/: index.html
dev/tu_optimization/: index.html
dev/tu_recipe/: index.html
dev/tu_sparse/: index.html
dev/tu_whatis/: index.html
docs/: make.jl
docs/src/assets/Codes/MPI/ccode/: CMakeLists.txt  GetPoissonMatrix.cpp
docs/src/assets/Codes/MPI/ccode/test/: nn.jl
docs/src/assets/Codes/ResourceManager/: CMakeLists.txt  TestResourceManager.cpp
docs/src/assets/Codes/mpi/: CMakeLists.txt  test_mpi.jl
docs/src/assets/Codes/mpi/Basis/: Basis.cpp  Basis.h  CMakeLists.txt
docs/src/assets/Codes/mpi/Poisson/: Poisson.h  poisson.jl  solver.jl  solver_data.jl  solver_onestep.jl
docs/src/assets/Codes/mpi/PoissonMPI/: Manifest.toml  Project.toml
docs/src/assets/Codes/mpi/PoissonMPI/src/: PoissonMPI.jl  Utils.jl
docs/src/assets/Codes/mpi/PoissonMPI/test/: test2.jl  test_poisson_serial.jl
docs/src/assets/Codes/mpi/Sum/: MSum.cpp  MSum.h
examples/JuliaOpModule.jl/DoItOp/: CMakeLists.txt  DoItOp.cpp  DoItOp.h  custom_op.txt  gradtest.jl
examples/custom_op/inner_product/: CMakeLists.txt  _inner_product_grad.py  gradtest.jl  gradtest.py  inner_product.cc  inner_product_grad.cc
examples/custom_op/nonlinear/: CMakeLists.txt  gradtest.jl  nonlinear.cpp  nonlinear.h
examples/gpu_custom_op/: CMakeLists.txt  GpuTest.cpp  GpuTest.cu  custom_op.txt  gputest.jl
examples/julia_custom_op/example/: CMakeLists.txt  CustomOp.cpp  JuliaModule.jl  compile.sh
examples/while_loop/DirichletBD/: CMakeLists.txt  DirichletBD.cpp  DirichletBD.h  custom_op.txt  gradtest.jl
src/: ADCME.jl  RBF.jl  UQFlow.jl  automl.jl  core.jl  datasets.jl  extra.jl  flow.jl  gan.jl  gpu.jl  install.jl  io.jl  kit.jl  layers.jl  misc.jl  mpi.jl  ode.jl  ops.jl  optim.jl  optim_flux.jl  optimizers.jl  options.jl  ot.jl  pcl.jl  plotly.jl  random.jl  rbf.jl  run.jl  sparse.jl  sqlite.jl  toolchain.jl  variable.jl
test/: Manifest.toml  Project.toml  RBF.jl  UQFlow.jl  automl.jl  automl_helper.jl  core.jl  customop.jl  extra.jl  flow.jl  gan.jl  io.jl  kit.jl  layers.jl  logistic.jl  misc.jl  mpi.jl  newton.jl  ode.jl  ops.jl  optim.jl  optimfuncs.jl  optimizers.jl  ot.jl  pcl.jl  random.jl  rbf.jl  runtests.jl  sparse.jl  sqlite.jl  variable.jl  wgan.jl
tmp/: CMakeLists.txt  TestFun.cpp  gradtest.jl
v0.2.4/: search_index.js
v0.2.5/: index.html  search_index.js
v0.3.1/: search_index.js
v0.3.2/: index.html  search_index.js
v0.3.4/: index.html
v0.3.5/: index.html
v0.3.6/: index.html  search_index.js
v0.4.0/: index.html  search_index.js
v0.4.1/: index.html  search_index.js
v0.4.2/: index.html
v0.4.3/: index.html  search_index.js
v0.4.4/: index.html  search_index.js
v0.4.5/: index.html
v0.4.6/: index.html  search_index.js
v0.4.7/: index.html  search_index.js
v0.4.8/: index.html
v0.4.9/: index.html
v0.5.0/: index.html
v0.5.1/: index.html  search_index.js
v0.5.10/: index.html
v0.5.11/: index.html
v0.5.12/: index.html
v0.5.13/: index.html
v0.5.2/: index.html  search_index.js
v0.5.3/: index.html
v0.5.4/: index.html  search_index.js
v0.5.5/: index.html  search_index.js
v0.5.6/: index.html  search_index.js
v0.5.7/: index.html
v0.5.8/: index.html
v0.5.9/: index.html
v0.6.0/: index.html  search_index.js
v0.6.1/: index.html  search_index.js
v0.6.2/: index.html  search_index.js
v0.6.3/: index.html  search_index.js
v0.6.4/: index.html  search_index.js
v0.6.4/assets/Codes/Mutables/: CMakeLists.txt
v0.6.5/: index.html  search_index.js
v0.6.6/: index.html  search_index.js
v0.6.6/assets/Codes/SharedMemory/: CMakeLists.txt
v0.6.7/: index.html  search_index.js
v0.7.1/: index.html  search_index.js
v0.7.2/: index.html  search_index.js
v0.7.3/: index.html  search_index.js
(+1993 files in other folders)
